k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-app
  labels:
    app: hello-k8s
