k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  namespace: hello-app
  labels:
    app: hello-k8s
spec:
  type: NodePort
  selector:
    app: hello-k8s
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
