k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s
  namespace: hello-app
  labels:
    app: hello-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hello.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-k8s
                port:
                  number: 80
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-k8s
                port:
                  number: 80
